--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,19 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=org.h2.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# OAuth2 Client Configuration
+spring.security.oauth2.client.registration.my-oauth-client.client-id=my-client-id
+spring.security.oauth2.client.registration.my-oauth-client.client-secret=my-client-secret
+spring.security.oauth2.client.registration.my-oauth-client.scope=openid,profile,email
+spring.security.oauth2.client.registration.my-oauth-client.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.my-oauth-client.redirect-uri=http://localhost:8080/login/oauth2/code/my-oauth-client
+spring.security.oauth2.client.registration.my-oauth-client.client-name=My OAuth Client
+
+spring.security.oauth2.client.provider.my-oauth-client.authorization-uri=http://localhost:8080/oauth/authorize
+spring.security.oauth2.client.provider.my-oauth-client.token-uri=http://localhost:8080/oauth/token
+spring.security.oauth2.client.provider.my-oauth-client.user-info-uri=http://localhost:8080/userinfo
+spring.security.oauth2.client.provider.my-oauth-client.user-name-attribute=sub
+
+# OAuth2 Resource Server Configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/
