--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
   keycloak:
     image: quay.io/keycloak/keycloak:22.0.1
     environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
       DB_VENDOR: postgres
       DB_ADDR: keycloak-db
       DB_DATABASE: keycloak
