--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=org.h2.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
 spring.security.oauth2.client.registration.keycloak.client-id=employee-app
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.keycloak.scope=openid
 spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:9091/realms/SpringBootKeycloak
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=admin
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9091/realms/SpringBootKeycloak
+# JWT Configuration
+jwt.auth.converter.resource-id=employee-app
+jwt.auth.converter.principal-attribute=principal_username
+# Logging Configuration
+logging.level.org.springframework.security=DEBUG
