Refactor code with some improvements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,10 +35,12 @@ services:
       KEYCLOAK_IMPORT: /realm-export.json
     ports:
       - "9091:8080"
+    volumes:
+      - D:/Employee-management/realm-export.json:/opt/keycloak/data/import/realm-export.json
     depends_on:
       - keycloak-db
     command:
-      - start-dev
+      - start-dev --import-realm
     networks:
       - keycloak-network
 
