Change port number of spring app

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -41,7 +41,8 @@ jwt:
     converter:
       resource-id: employee-app
       principal-attribute: principal_username
-
+server:
+  port: 8090
 logging:
   level:
     org.springframework.security: DEBUG
