Add keycloak configuration in test part

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -6,3 +6,17 @@ spring:
     driverClassName: org.h2.Driver
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+  security:
+    oauth2:
+      client:
+        registration:
+          keycloak:
+            client-id: employee-app
+            authorization-grant-type: authorization_code
+            scope: openid
+        provider:
+          keycloak:
+            issuer-uri: http://localhost:9091/realms/SpringBootKeycloak
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:9091/realms/SpringBootKeycloak
