--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -20,3 +20,8 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:9091/realms/SpringBootKeycloak
+jwt:
+  auth:
+    converter:
+      resource-id: employee-app
+      principal-attribute: principal_username
