--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -20,6 +20,8 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:9091/realms/SpringBootKeycloak
+server:
+  port:8082
 jwt:
   auth:
     converter:
