--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -18,10 +18,10 @@ spring:
             scope: openid
         provider:
           keycloak:
-            issuer-uri: http://localhost:9091/realms/SpringBootKeycloak
+            issuer-uri: http://192.168.1.5:9091/realms/SpringBootKeycloak
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:9091/realms/SpringBootKeycloak
+          issuer-uri: http://192.168.1.5:9091/realms/SpringBootKeycloak
 jwt:
   auth:
     converter:
