--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,18 @@ services:
     networks:
       - keycloak-network
 
+  jenkins:
+    container_name: jenkins
+    image: jenkins/jenkins:lts
+    ports:
+      - "9090:8080"
+      - "50000:50000"
+    volumes:
+      - jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - keycloak-network
+
 volumes:
   keycloak-db-data:
   jenkins_home:
