Create ubuntu container in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,13 @@ services:
     networks:
       - my-network
 
+  ubuntu:
+    container_name: ubuntu
+    image: ubuntu:latest
+    command: sleep infinity
+    networks:
+      - my-network
+
 volumes:
   keycloak-db-data:
   jenkins_home:
