--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,10 +32,10 @@ spring:
             scope: openid
         provider:
           keycloak:
-            issuer-uri: http://keycloak:9091/realms/SpringBootKeycloak
+            issuer-uri: http://localhost:9091/realms/SpringBootKeycloak
       resourceserver:
         jwt:
-          issuer-uri: http://keycloak:9091/realms/SpringBootKeycloak
+          issuer-uri: http://localhost:9091/realms/SpringBootKeycloak
 jwt:
   auth:
     converter:
